@@ -7,7 +7,11 @@ zeit.cms changes
 - Limit the amount of PubliationDependencies that are actually published;
   configurable as product config of zeit.workflow: ``dependency-publish-limit``
   (#10242).
+
 - Use gocept.testing.
+
+- For an article, include ressort and sub-ressort in the breadcrumbs instead
+  of the repository path. (#10151)
 
 
 1.52.0 (2011-12-08)
